# applied-python

./: .gitignore  Makefile  pyproject.toml
hackathons/: BaseGame.py  tester.py
hackathons/bot/: bot.py  command_pool.py
hackathons/bot/command_handler/: calc.py  calories_calculator.py  message.py  roll.py  sample.py  stackoverflow.py  viselica.py  weather.py
hackathons/bot/tests/command_handler/: Test_message.py  test_sample.py
hackathons/games/: example.py
homeworks/dir_dict/: dir_dict.py  main.ipynb
homeworks/grep/: grep.ipynb  grep.py  old_grep.py
homeworks/grep/tests/: test_grep.py
homeworks/log_parse/: Makefile  log_parse.py  main.ipynb  test.txt  test_log_parse.py  tests.py
homeworks/minigolf/tests/: test_minigolf.py
homeworks/profile/: profile.py
homeworks/task_queue/: README.md  server.py
homeworks/task_queue/tests/: test_server.py
homeworks/text_history/: main.ipynb  text_history.py
homeworks/text_history/tests/: test_text_history.py
homeworks/whenthen/: whenthen.py
live/2018-04-06/tests/: __init__.py  test_action.py  test_repository.py
live/2018-05-23/: client.py  proxy.py  server.py  test_server.py
live/2018-10-19/notes/: access.py  account.py  storage.py
live/2018-10-19/tests/notes/: test_account.py  test_storage.py
talks/03_oop/import_sample/: predicates.py
talks/03_oop/import_sample/geometry/: __init__.py  circle.py  square.py
talks/03_oop/test_sample/: interval.py
talks/03_oop/test_sample/tests/: test_interval.py
talks/04_io/: http_server.py
talks/06_db/: mysql_example.py
talks/07_async/: server.py
