[tool.poetry]
name = "applied-python"
version = "0.1.0"
description = ""
authors = ["Makar Nikitin <manikitin@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
nbclassic = "1.0.0"
black = "24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
